--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "victory": "^35.5.0",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
