--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,13 @@
 # testing
 /coverage
 *.snap
+.snap
 # production
 /build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
